--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack_demo_app",
+  "name": "webpack_typescript_app",
   "version": "1.0.0",
   "description": "Demo Webpack App Configuration",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "",
     "start": "webpack serve --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "publish": "git subtree push --prefix dist origin gh-pages"
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "Himjyoti",
   "license": "ISC",
