--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack_typescript_app",
+  "name": "webpack_typescript_initial_files",
   "version": "1.0.0",
   "description": "Demo Webpack App Configuration",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "Himjyoti",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "css-loader": "^7.1.2",
